gitea/base/gitea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-app
  template:
    metadata:
      labels:
        app: gitea-app
    spec:
      serviceAccountName: gitea-sa
      containers:
        - name: gitea
          image: docker.gitea.com/gitea:1.25.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /user/login
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
