gitea/base/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-psql-service
  namespace: gitea
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: psql
  clusterIP: None
  selector:
    app: gitea-psql
